--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app--credit-card-payments-app-template--remix",
+  "name": "shopify-epayco-creditcard",
   "private": true,
   "scripts": {
     "build": "remix build",
@@ -31,8 +31,9 @@
     "@shopify/shopify-api": "^9.0.1",
     "@shopify/shopify-app-remix": "^2.3.0",
     "@shopify/shopify-app-session-storage-prisma": "^2.0.3",
-    "isbot": "^4.1.0",
     "eckey-utils": "^0.7.13",
+    "epayco-sdk-node": "^1.3.0",
+    "isbot": "^4.1.0",
     "prisma": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
