--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,16 +1,28 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-name = "<App Name>"
-client_id = "<API Client ID>"
-application_url = "https://example.com"
+client_id = "c701d59ba2163f792fa2c08a31346f99"
+name = "epayco credit card payment"
+handle = "epayco-credit-card-payment"
+application_url = "https://treat-architectural-manual-its.trycloudflare.com"
 embedded = false
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "customerpayco.myshopify.com"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_payment_gateways,write_payment_sessions"
+scopes = "read_orders,write_payment_gateways,write_payment_sessions"
+
+[auth]
+redirect_urls = [
+  "https://treat-architectural-manual-its.trycloudflare.com/auth/callback",
+  "https://treat-architectural-manual-its.trycloudflare.com/auth/shopify/callback",
+  "https://treat-architectural-manual-its.trycloudflare.com/api/auth/callback"
+]
 
 [webhooks]
-api_version = "2023-07"
+api_version = "2024-04"
 
 [pos]
 embedded = false
