--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "remix build",
     "predev": "prisma generate && prisma migrate deploy",
-    "dev": "shopify app dev --tunnel-url https://plugins.epayco.io/develop/shopify-epayco-creditcard:2083",
+    "dev": "shopify app dev --tunnel-url http://localhost:3000",
     "config:link": "shopify app config link",
     "config:push": "shopify app config push",
     "generate": "shopify app generate",
