--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "config:link": "shopify app config link",
     "config:push": "shopify app config push",
     "generate": "shopify app generate",
-    "deploy": "shopify app deploy",
+    "deploy": "shopify app deploy --path http://localhost:3000",
     "config:use": "shopify app config use",
     "env": "shopify app env",
     "start": "remix-serve build/index.js",
