--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SHOPIFY_API_KEY="c701d59ba2163f792fa2c08a31346f99"
 SHOPIFY_API_SECRET="1ecb49fac2bcce4445d8b5baebfbe788"
 SCOPES="write_payment_gateways,write_payment_sessions"
-SHOPIFY_APP_URL="http://plugins.epayco.io:3000/"
+SHOPIFY_APP_URL="http://localhost:3000"
 #DB_SERVER
 #DB_USERNAME
 #DB_PASSWORD
