--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "build": "remix build",
     "predev": "prisma generate && prisma migrate deploy",
-    "dev": "shopify app dev --tunnel-url http://localhost:3000",
+    "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "config:push": "shopify app config push",
     "generate": "shopify app generate",
-    "deploy": "shopify app deploy --path http://localhost:3000",
+    "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
     "start": "remix-serve build/index.js",
