feat:Se implementa extension de pago

--- a/.env
+++ b/.env
@@ -1,11 +1,7 @@
-SHOPIFY_API_KEY="c701d59ba2163f792fa2c08a31346f99"
-SHOPIFY_API_SECRET="1ecb49fac2bcce4445d8b5baebfbe788"
-SCOPES="write_payment_gateways,write_payment_sessions"
-SHOPIFY_APP_URL="http://localhost:3000"
-#DB_SERVER
-#DB_USERNAME
-#DB_PASSWORD
-#DB_NAME
-#SHOP_CUSTOM_DOMAIN
-#BASE_URL_APIFY
+SHOPIFY_API_KEY=c701d59ba2163f792fa2c08a31346f99
+SHOPIFY_API_SECRET=1ecb49fac2bcce4445d8b5baebfbe788
+SCOPES=write_payment_gateways,write_payment_sessions
+SHOPIFY_APP_URL=http://localhost:3000
+BASE_URL_APIFY=https://apify.epayco.co
 DATABASE_URL=mysql://root:test@localhost/shopify-credit-card
+SHOPIFY_CREDIT_CARD_ID=78c826ff-7255-4149-847d-92b66596ff7c
