--- a/extensions/credit-card/shopify.extension.toml
+++ b/extensions/credit-card/shopify.extension.toml
@@ -4,11 +4,11 @@ api_version = "2024-07"
 name = "credit-card"
 type = "payments_extension"
 handle = "credit-card"
-payment_session_url = "https://plugins.epayco.io/testing/prueba/index.php"
-refund_session_url = "https://plugins.epayco.io/testing/prueba/index.php"
-capture_session_url = "https://plugins.epayco.io/testing/prueba/index.php"
-void_session_url = "https://plugins.epayco.io/testing/prueba/index.php"
-confirmation_callback_url = "https://plugins.epayco.io/testing/prueba/index.php"
+payment_session_url = "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/app/payment_session"
+refund_session_url = "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/app/refund_session"
+capture_session_url = "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/app/capture_session"
+void_session_url = "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/app/void_session"
+confirmation_callback_url = "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/app/confirm_session"
 multiple_capture = false
 merchant_label = "ePayco Credit Card"
 supported_countries = [
