--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,12 +3,13 @@
 client_id = "c701d59ba2163f792fa2c08a31346f99"
 name = "epayco credit card payment"
 handle = "epayco-credit-card-payment"
-application_url = "https://well-moscow-developments-herb.trycloudflare.com"
+application_url = "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com"
 embedded = false
 
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "customerpayco.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
@@ -16,9 +17,9 @@ scopes = "read_orders,write_payment_gateways,write_payment_sessions"
 
 [auth]
 redirect_urls = [
-  "https://well-moscow-developments-herb.trycloudflare.com/auth/callback",
-  "https://well-moscow-developments-herb.trycloudflare.com/auth/shopify/callback",
-  "https://well-moscow-developments-herb.trycloudflare.com/api/auth/callback"
+  "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/auth/callback",
+  "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/auth/shopify/callback",
+  "https://shopify-epayco-creditcard-4848dffab68f.herokuapp.com/api/auth/callback"
 ]
 
 [webhooks]
