--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ SHOPIFY_API_SECRET=1ecb49fac2bcce4445d8b5baebfbe788
 SCOPES=write_payment_gateways,write_payment_sessions
 SHOPIFY_APP_URL=http://localhost:3000
 BASE_URL_APIFY=https://apify.epayco.io
-DATABASE_URL=mysql://dev-local:gcb!rqb1rng7cvy8VEJ@new-prepo-cluster-cluster.cluster-ctl6s80ppnva.us-east-1.rds.amazonaws.com/epayco_db
+DATABASE_URL=mysql://pluginsepayco_local:sistemas1305@plugins.epayco.io/pluginsepayco_db
 #DATABASE_URL=mysql://root:test@localhost/shopify-credit-card
 SHOPIFY_CREDIT_CARD_ID=78c826ff-7255-4149-847d-92b66596ff7c
