--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ BASE_URL_APIFY=https://apify.epayco.io
 DATABASE_URL=mysql://pluginsepayco_local:sistemas1305@plugins.epayco.io/pluginsepayco_db
 #DATABASE_URL=mysql://root:test@localhost/shopify-credit-card
 SHOPIFY_CREDIT_CARD_ID=78c826ff-7255-4149-847d-92b66596ff7c
+PORT=3000
