--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 SHOPIFY_API_KEY=c701d59ba2163f792fa2c08a31346f99
 SHOPIFY_API_SECRET=1ecb49fac2bcce4445d8b5baebfbe788
 SCOPES=write_payment_gateways,write_payment_sessions
-SHOPIFY_APP_URL=http://localhost:3000
+SHOPIFY_APP_URL=https://shopify-epayco-creditcard-277476b7083b.herokuapp.com
 BASE_URL_APIFY=https://apify.epayco.io
 DATABASE_URL=mysql://pluginsepayco_local:sistemas1305@plugins.epayco.io/pluginsepayco_db
 #DATABASE_URL=mysql://root:test@localhost/shopify-credit-card
 SHOPIFY_CREDIT_CARD_ID=78c826ff-7255-4149-847d-92b66596ff7c
-PORT=3000
+#PORT=3000
