--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SCOPES=write_payment_gateways,write_payment_sessions
 SHOPIFY_APP_URL=https://shopify-epayco-creditcard-277476b7083b.herokuapp.com
 BASE_URL_APIFY=https://apify.epayco.io
 DATABASE_URL=mysql://pluginsepayco_local:sistemas1305@plugins.epayco.io/pluginsepayco_db
+SHOPIFY_CREDIT_CARD_PAGA_CON_EPAYCO_ID=ef688425-c02a-482a-9e31-6bf85f9bae4f
